--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
                 <ul
                     class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4">
                     <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="https://health-monitor-sa.vercel.app/emergency.html">Emergency</a>
+                        <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="https://health-monitor-sa.vercel.app/community.html">Community</a>
+                        <a class="nav-link mx-2 text-primary" href="#">Community</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="https://health-monitor-sa.vercel.app/signup.html">Register</a>
+                        <a class="nav-link mx-2 text-primary" href="#">Register</a>
                     </li>
                 </ul>
                 <div class="login-btn">
-                    <a href="https://health-monitor-sa.vercel.app/login.html"><button class="btn primary-btn">Login</button></a>
+                    <a href="login.html"><button class="btn primary-btn">Login</button></a>
                 </div>
             </div>
         </div>
