--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
                 ">Forgot password?</a>
             </div>
             <div class="submit-button d-flex justify-content-center align-items-center">
-              <a class="btn primary-btn  m-auto mt-4 submit-button-login" href="admin-dashboard/dashboard.html">Login</a>
+              <a class="btn primary-btn  m-auto mt-4 submit-button-login" href="admin-dashboard/users.html">Login</a>
             </div>
           </form>
           <!-- Login Form End -->
