--- a/login.html
+++ b/login.html
@@ -59,20 +59,20 @@
         <div class="foms-container">
           <!-- Login Form Start -->
           <form class="login-from" id="login-form">
-            <div class="email my-4">
-              <input type="email" placeholder="Email">
-            </div>
-            <div class="password mt-4 position-relative">
-              <input type="password" placeholder="Password">
-              <img src="assets/icons/show pass.svg" width="23px" class="text-primary position-absolute hide-pass"
-                alt="">
-            </div>
-            <div class="forget-pass">
-              <a href="" class="text-decoration-none forgot-password pt-1
-                ">Forgot password?</a>
-            </div>
+              <div class="email my-4">
+                <input type="email" id="login-email" placeholder="Email" required>
+              </div>
+              <div class="password mt-4 position-relative">
+                <input type="password" id="login-password" placeholder="Password" required>
+                <img src="assets/icons/show pass.svg" width="23px" class="text-primary position-absolute hide-pass"
+                  alt="">
+              </div>
+              <div class="forget-pass">
+                <a href="" class="text-decoration-none forgot-password pt-1
+                  ">Forgot password?</a>
+              </div>
             <div class="submit-button d-flex justify-content-center align-items-center">
-              <a class="btn primary-btn  m-auto mt-4 submit-button-login" href="admin-dashboard/users.html">Login</a>
+              <button class="btn primary-btn  m-auto mt-4 submit-button-login">Login</button>
             </div>
           </form>
           <!-- Login Form End -->
@@ -190,6 +190,19 @@
     </footer>
     <!-- Footer end -->
     <script>
+       document.getElementById("login-form").addEventListener("submit", function (event) {
+          event.preventDefault(); // Prevent form from submitting normally
+
+          // Get user input
+          var email = document.getElementById("login-email").value;
+          var password = document.getElementById("login-password").value;
+          // Check credentials
+          if (email === "hcp@nxtgenwebsite.com" && password === "admin123") {
+            window.location.href = "admin-dashboard/users.html";
+          } else {
+            window.location.href = "/";
+          }
+        });
       document.getElementById('linkedin-share-btn').addEventListener(('click'), () => {
         const shareUrl = "https://www.linkedin.com/sharing/share-offsite";
 
