--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                             required>
                                     </div>
                                     <div class="mb-3">
-                                        <input type="text" class="form-control" name="zipcode" placeholder="Zipcode*">
+                                        <input type="text" class="form-control" name="zipcode" placeholder="Zipcode">
                                     </div>
                                     <div class="d-flex justify-content-between">
                                         <button type="button" class="btn btn-secondary" id="prevBtn"
