--- a/admin-dashboard/edit-facilities.html
+++ b/admin-dashboard/edit-facilities.html
@@ -566,7 +566,7 @@
 
                         <div id="actionButtons" class="col-12 mt-4">
                             <div class="d-flex gap-3">
-                                <button type="submit" id="update-btn" class="btn btn-primary text-white">Save</button>
+                                <button type="submit" id="update-btn" class="btn btn-primary text-white">Update</button>
                                 <button type="button" class="btn btn-primary text-white"
                                     id="cancelButton">Cancel</button>
                             </div>
